WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60417
Fix layer names to say "tiled" and show CALayer addresses, not PlatformCALayer addresses
https://bugs.webkit.org/show_bug.cgi?id=60417
Summary
Fix layer names to say "tiled" and show CALayer addresses, not PlatformCALaye...
Chris Marrin
Reported
2011-05-06 16:41:09 PDT
From <
rdar://problem/9387092
> We should fix layer names to say "tiled" and show CALayer addresses, not PlatformCALayer addresses, to make debugging easier. I've been confused by the lack of "tiled" in CA_PRINT_TREE output several times now.
Attachments
Patch
(2.50 KB, patch)
2011-05-06 16:57 PDT
,
Chris Marrin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2011-05-06 16:57:10 PDT
Created
attachment 92659
[details]
Patch
Chris Marrin
Comment 2
2011-05-09 06:51:48 PDT
Committed
r86051
: <
http://trac.webkit.org/changeset/86051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug